--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.9.4",
     "leaflet-editable": "^1.2.0",
     "leaflet-editable-polyline": "^1.0.8",
+    "leaflet-routing-machine": "^3.2.12",
     "leaflet.markercluster": "^1.5.3",
     "polyline-encoded": "^0.0.9",
     "react": "^18.2.0",
