--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "polyline-encoded": "^0.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
     "react-leaflet-draw": "^0.20.4",
@@ -26,7 +27,10 @@
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-leaflet-muster": "^2.0.1",
     "react-router-dom": "^6.17.0",
-    "supercluster": "^8.0.1"
+    "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
+    "supercluster": "^8.0.1",
+    "zustand": "^4.4.7"
   },
   "browserslist": [
     ">0.2%",
