--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "haversine": "^1.1.1",
     "leaflet": "^1.9.4",
     "leaflet-editable": "^1.2.0",
     "leaflet-editable-polyline": "^1.0.8",
