--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "haversine": "^1.1.1",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "leaflet-editable": "^1.2.0",
     "leaflet-editable-polyline": "^1.0.8",
     "leaflet-routing-machine": "^3.2.12",
